--- a/slides/index.html
+++ b/slides/index.html
@@ -153,6 +153,54 @@ location / {
 	  <h2>Repsheet gives you more fluid options for dealing with bad actors</h2>
 	</section>
 
+	<section>
+	  <h2>How does it work?</h2>
+	</section>
+
+	<section>
+	  <h2>todo: image</h2>
+	</section>
+
+	<section>
+	  <h2>Components</h2>
+	  <ul>
+	    <li>hiredis (Redis C adapter)</li>
+	    <li>librepsheet (repsheet logic)</li>
+	    <li>NGINX (embedded module)</li>
+	  </ul>
+	</section>
+
+	<section>
+	  <h2>We will only focus on the NGINX module for this workshop</h2>
+	</section>
+
+	<section>
+	  <h2>Let's start with the configuration</h2>
+	</section>
+
+	<section>
+	  <h2>Options</h2>
+	  <pre>
+	    <code data-trim class="conf">
+repsheet on;
+repsheet_user_lookup on;
+repsheet_ip_lookup on;
+
+repsheet_redis_host localhost;
+repsheet_redis_port 6379;
+repsheet_redis_connection_timeout 5;
+repsheet_redis_read_timeout 10;
+
+repsheet_proxy_headers on;
+repsheet_user_cookie "user";
+	    </code>
+	  </pre>
+	</section>
+
+	<section>
+	  <h2>A full configuration is provided in the repsheet-nginx repository</h2>
+	</section>
+
         <section style="text-align: left;">
           <h1>References</h1>
           <p>
