--- a/slides/index.html
+++ b/slides/index.html
@@ -52,7 +52,7 @@
           <ul>
             <li>Setup</li>
             <li>Introduction to Repsheet</li>
-            <li>A Basic Repsheet Environment</li>
+            <li>The Repsheet Environment</li>
             <li>Building a Processor</li>
             <li>Wrap-Up</li>
           </ul>
@@ -376,6 +376,18 @@ func repsheetHandler(next http.Handler) http.Handler {
 
 	<section>
 	  <h2>Exercise: Make a better marked response</h2>
+	</section>
+
+	<section>
+	  <h2>Everything you've done so far is all manual</h2>
+	</section>
+
+	<section>
+	  <h2>While that's still a big improvement, it lacks automation</h2>
+	</section>
+
+	<section>
+	  <h2>So let's build some!</h2>
 	</section>
 
         <section style="text-align: left;">
