--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,9 @@
   <body>
     <div class="container">
       <form class="form-signin" action="/" method="post">
+	{{ if .Error }}
 	<div class="login-error">{{.Error}}</div>
+	{{ end }}
         <h2 class="form-signin-heading">Please sign in</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" id="inputEmail" name="inputEmail" class="form-control" placeholder="Email address" required autofocus>
