--- a/slides/index.html
+++ b/slides/index.html
@@ -62,6 +62,15 @@
           <h2>Setup</h2>
         </section>
 
+	<section>
+	  <h2>Grab the dependencies</h2>
+	  <pre>
+	    <code data-trim class="nohighlight">
+$ ./fetch_dependencies
+	    </code>
+	  </pre>
+	</section>
+
         <section>
           <h2>Build and install hiredis</h2>
           <pre>
