--- a/slides/index.html
+++ b/slides/index.html
@@ -222,9 +222,8 @@ repsheet_user_cookie "user";          # main conf
 	  <h2>Booting up the sample application</h2>
 	  <pre>
 	    <code data-trim class="nohighlight">
-$ go get github.com/tools/godep
 $ cd app
-$ godep go run app.go
+$ go run app.go
 $ curl localhost:8080
 curl localhost:8080
 &lt;!DOCTYPE html&gt;
@@ -249,6 +248,7 @@ $ tail -f logs/app.log
 	  <h2>Putting the app behind NGINX</h2>
 	  <pre>
 	    <code data-trim class="conf">
+# In repsheet/repsheet-nginx-3.1.3/nginx.conf
 # http section
 upstream app {
   server localhost:8080;
@@ -266,8 +266,9 @@ location / {
 	  <h2>Reload the NGINX config and try against the NGINX port</h2>
 	  <pre>
 	    <code data-trim class="nohighlight">
-$ build/nginx/sbin/nginx -s reload
-$ curl localhost:8888
+$ cd repsheet/repsheet-nginx-3.1.3
+$ build/nginx/sbin/nginx
+$ curl localhost:8888 # You should see app output
 	    </code>
 	  </pre>
 	</section>
@@ -304,12 +305,7 @@ $ curl localhost:8888
 	    <code data-trim class="nohighlight">
 $ redis-cli set 127.0.0.1:repsheet:ip:whitelisted manual
 OK
-$ curl -I localhost:8888
-HTTP/1.1 200 OK
-Server: nginx/1.8.0
-Date: Tue, 22 Sep 2015 19:58:14 GMT
-Content-Type: text/plain; charset=utf-8
-Connection: keep-alive
+$ curl -I localhost:8888 # Normal app output
 	    </code>
 	  </pre>
 	</section>
@@ -318,6 +314,7 @@ Connection: keep-alive
 	  <h2>Let's take a look at the logs</h2>
 	  <pre>
 	    <code data-trim class="nohighlight">
+$ cd repsheet/repsheet-nginx-3.1.3
 $ tail build/nginx/logs/error.log
 2015/09/22 14:53:01 [error] 58985#0: *4 [Repsheet] - IP 127.0.0.1
   was blocked by repsheet. Reason: manual, client: 127.0.0.1,
@@ -346,7 +343,8 @@ $ curl localhost:8888 # you should see the normal response
 	  <h2>But under the hood</h2>
 	  <pre>
 	    <code data-trim class="nohighlight">
-# NGINX logs
+$ cd repsheet/repsheet-nginx-3.1.3
+$ tail build/nginx/logs/error.log
 2015/09/22 16:16:34 [error] 58985#0: *21 [Repsheet] - IP 127.0.0.1
   was found on repsheet. No action taken, client: 127.0.0.1, server: ,
   request: "GET / HTTP/1.1", host: "localhost:8888"
@@ -405,7 +403,7 @@ func repsheetHandler(next http.Handler) http.Handler {
 	    <code data-trim class="nohighlight">
 $ cd pester
 $ go build pester.go
-$ ./pester -host localhost -port 8888 -loginAttack /
+$ ./pester -host localhost -port 8888 -attack /
 Starting login attack on http://localhost:8888/
 The password is: P4$$w0rd!
 	    </code>
@@ -417,7 +415,18 @@ The password is: P4$$w0rd!
 	</section>
 
 	<section>
-	  <h2>Exercise: write a log parser that detects login attacks</h2>
+	  <h2>But you can also generate data from other ips</h2>
+	  <pre>
+	    <code data-trim class="nohighlight">
+$ ./pester -host localhost -port 8888 -attack / -from 1.1.1.1
+Starting login attack on http://localhost:8888/
+The password is: P4$$w0rd!
+	    </code>
+	  </pre>
+	</section>
+
+	<section>
+	  <h2>Exercise: write a log parser that detects login attacks and blacklists bad actors</h2>
 	</section>
 
 	<section>
