--- a/slides/index.html
+++ b/slides/index.html
@@ -75,7 +75,7 @@ $ ./fetch_dependencies
           <h2>Build and install hiredis</h2>
           <pre>
             <code data-trim class="nohighlight">
-$ cd repsheet/hiredis
+$ cd repsheet/hiredis-0.13.3
 $ make
 $ sudo PREFIX=/usr make install
 $ sudo ldconfig # if you are on linux
@@ -87,7 +87,7 @@ $ sudo ldconfig # if you are on linux
           <h2>Build and install librepsheet</h2>
           <pre>
             <code data-trim class="nohighlight">
-$ cd repsheet/librepsheet
+$ cd repsheet/librepsheet-6.0.0
 $ ./autogen.sh
 $ ./configure --prefix=/usr
 $ make
